# screentimeapi

./: .env.dist  Cargo.toml  README.md  rest-api.http
.github/workflows/: rust.yml
migrations/2023-11-05-184749_create_adjustment_type/: down.sql  up.sql
migrations/2023-11-16-072521_create_adjustment/: down.sql  up.sql
migrations/2023-11-24-133538_create_time_entry/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  web.rs
