[package]
name = "screentimeapi"
version = "0.0.0-dev"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
chrono = { version = "0.4.31", default_features = false }
clap = { version = "4.4.8", features = ["derive"] }
diesel = { version = "2.1.3", features = ["chrono", "mysql"] }
dotenvy = "0.15.7"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.14.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
